--- a/django_project/requirements.txt
+++ b/django_project/requirements.txt
@@ -23,7 +23,7 @@ backports.zoneinfo==0.2.1
 beautifulsoup4 @ file:///tmp/build/80754af9/beautifulsoup4_1601924105527/work
 bitarray @ file:///tmp/build/80754af9/bitarray_1605065113847/work
 bkcharts==0.2
-bleach @ file:///tmp/build/80754af9/bleach_1600439572647/work
+bleach==5.0.1
 bokeh @ file:///tmp/build/80754af9/bokeh_1603297833684/work
 boto==2.49.0
 Bottleneck==1.3.2
@@ -56,6 +56,8 @@ distributed @ file:///tmp/build/80754af9/distributed_1605066520644/work
 Django==4.0.5
 django-crispy-forms==1.14.0
 django-filter==22.1
+django-markdownify==0.9.2
+django-quill-editor==0.1.40
 docutils==0.16
 entrypoints==0.3
 et-xmlfile==1.0.1
@@ -82,7 +84,7 @@ httplib2==0.20.2
 idna @ file:///tmp/build/80754af9/idna_1593446292537/work
 imageio @ file:///tmp/build/80754af9/imageio_1594161405741/work
 imagesize==1.2.0
-importlib-metadata @ file:///tmp/build/80754af9/importlib-metadata_1602276842396/work
+importlib-metadata==4.12.0
 iniconfig @ file:///tmp/build/80754af9/iniconfig_1602780191262/work
 intervaltree @ file:///tmp/build/80754af9/intervaltree_1598376443606/work
 ipykernel @ file:///tmp/build/80754af9/ipykernel_1596207638929/work/dist/ipykernel-5.3.4-py3-none-any.whl
@@ -112,6 +114,8 @@ libarchive-c==2.9
 llvmlite==0.34.0
 locket==0.2.0
 lxml @ file:///tmp/build/80754af9/lxml_1603216285000/work
+Markdown==3.4.1
+markdown2==2.4.3
 MarkupSafe==1.1.1
 matplotlib @ file:///tmp/build/80754af9/matplotlib-base_1603378225747/work
 mccabe==0.6.1
@@ -235,6 +239,7 @@ terminado==0.9.1
 testpath==0.4.4
 threadpoolctl @ file:///tmp/tmp9twdgx9k/threadpoolctl-2.1.0-py3-none-any.whl
 tifffile==2020.10.1
+tinycss2==1.1.1
 toml @ file:///tmp/build/80754af9/toml_1592853716807/work
 toolz @ file:///tmp/build/80754af9/toolz_1601054250827/work
 tornado==6.0.4
