--- a/django_project/requirements.txt
+++ b/django_project/requirements.txt
@@ -26,6 +26,8 @@ bkcharts==0.2
 bleach==5.0.1
 bokeh @ file:///tmp/build/80754af9/bokeh_1603297833684/work
 boto==2.49.0
+boto3==1.24.66
+botocore==1.27.66
 Bottleneck==1.3.2
 brotlipy==0.7.0
 cachetools==4.2.4
@@ -58,6 +60,7 @@ django-crispy-forms==1.14.0
 django-filter==22.1
 django-markdownify==0.9.2
 django-quill-editor==0.1.40
+django-storages==1.13.1
 docutils==0.16
 entrypoints==0.3
 et-xmlfile==1.0.1
@@ -77,6 +80,7 @@ google-auth-httplib2==0.1.0
 google-auth-oauthlib==0.4.6
 googleapis-common-protos==1.53.0
 greenlet @ file:///tmp/build/80754af9/greenlet_1600874013538/work
+gunicorn==20.1.0
 h5py==2.10.0
 HeapDict==1.0.1
 html5lib @ file:///tmp/build/80754af9/html5lib_1593446221756/work
@@ -97,6 +101,7 @@ jdcal==1.4.1
 jedi @ file:///tmp/build/80754af9/jedi_1592841866100/work
 jeepney @ file:///tmp/build/80754af9/jeepney_1605069705079/work
 Jinja2==2.11.2
+jmespath==1.0.1
 joblib @ file:///tmp/build/80754af9/joblib_1601912903842/work
 json5==0.9.5
 jsonschema @ file:///tmp/build/80754af9/jsonschema_1602607155483/work
@@ -205,6 +210,7 @@ rope @ file:///tmp/build/80754af9/rope_1602264064449/work
 rsa==4.7.2
 Rtree==0.9.4
 ruamel_yaml==0.15.87
+s3transfer==0.6.0
 scikit-image==0.17.2
 scikit-learn @ file:///tmp/build/80754af9/scikit-learn_1598376899566/work
 scipy @ file:///tmp/build/80754af9/scipy_1597686649129/work
