--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,18 @@
 asgiref==3.5.2
 autopep8==1.7.0
+backports.zoneinfo==0.2.1
 boto3==1.24.67
 botocore==1.27.67
-crispy-bootstrap5==0.6
 Django==4.1.1
 django-crispy-forms==1.14.0
-django-filter==22.1
-django-markdownify==0.9.2
-django-on-heroku==1.1.2
-django-quill-editor==0.1.40
 django-storages==1.13.1
 gunicorn==20.1.0
 jmespath==1.0.1
-Pillow==9.2.0
-postgres==4.0
+pip==20.1.1
 pycodestyle==2.9.1
 python-dateutil==2.8.2
 s3transfer==0.6.0
+setuptools==47.1.0
 six==1.16.0
 sqlparse==0.4.2
 toml==0.10.2
