--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ backports.zoneinfo==0.2.1
 boto3==1.24.67
 botocore==1.27.67
 Django==4.1.1
-django-crispy-forms==1.14.0
+# django-crispy-forms==1.14.0
 django-storages==1.13.1
 gunicorn==20.1.0
 jmespath==1.0.1
