--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.5.2
 autopep8==1.7.0
 backports.zoneinfo==0.2.1
+beautifulsoup4==4.11.1
 boto3==1.24.67
 botocore==1.27.67
 crispy-bootstrap5==0.6
@@ -9,12 +10,14 @@ django-crispy-forms==1.14.0
 django-storages==1.13.1
 gunicorn==20.1.0
 jmespath==1.0.1
+markdownify==0.11.6
 pip==20.1.1
 pycodestyle==2.9.1
 python-dateutil==2.8.2
 s3transfer==0.6.0
 setuptools==47.1.0
 six==1.16.0
+soupsieve==2.3.2.post1
 sqlparse==0.4.2
 toml==0.10.2
 urllib3==1.26.12
