--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-storages==1.13.1
 gunicorn==20.1.0
 jmespath==1.0.1
 markdownify==0.11.6
+Pillow==9.2.0
 pip==20.1.1
 psycopg2-binary==2.9.3
 pycodestyle==2.9.1
