--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ botocore==1.27.67
 crispy-bootstrap5==0.6
 Django==4.1.1
 django-crispy-forms==1.14.0
+django-markdownify==0.9.2
 django-storages==1.13.1
 gunicorn==20.1.0
 jmespath==1.0.1
