--- a/requirements.txt
+++ b/requirements.txt
@@ -7,26 +7,27 @@ botocore==1.27.67
 crispy-bootstrap5==0.6
 dj-database-url==1.0.0
 Django==4.1.1
+django-ckeditor==6.5.1
 django-crispy-forms==1.14.0
 django-filter==22.1
+django-js-asset==2.0.0
 django-markdownify==0.9.2
 django-on-heroku==1.1.2
 django-quill-editor==0.1.40
 django-storages==1.13.1
+django-summernote==0.8.20.0
 gunicorn==20.1.0
 importlib-metadata==4.12.0
 jmespath==1.0.1
 Markdown==3.4.1
 markdownify==0.11.6
 Pillow==9.2.0
-pip==20.1.1
 postgres==4.0
 psycopg2-binary==2.9.3
 psycopg2-pool==1.1
 pycodestyle==2.9.1
 python-dateutil==2.8.2
 s3transfer==0.6.0
-setuptools==47.1.0
 six==1.16.0
 soupsieve==2.3.2.post1
 sqlparse==0.4.2
@@ -34,6 +35,5 @@ tinycss2==1.1.1
 toml==0.10.2
 urllib3==1.26.12
 webencodings==0.5.1
-wheel==0.37.0
 whitenoise==6.2.0
 zipp==3.8.1
