feat: update fav icon and meta tags

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "MARKDOWNIFY",
         "pagedown",
         "summernote",
-        "techblog"
+        "techblog",
+        "Webdev"
     ]
 }
